<resources>
    <string name="app_name">MyMovieProject</string>
    <string name="lewati_perkenalan">Lewati Perkenalan</string>
    <string name="lanjutkan">Lanjutkan</string>
    <string name="now_playing">Now Playing</string>
    <string name="now_playing_desc">Lebih mudah untuk mengetahui\nfilm yang sedang tampil</string>
    <string name="pre_sale">Pre Sale</string>
    <string name="pre_sale_desc">Tidak khawatir ketinggalan\nupdate film terbaru</string>
    <string name="cashless">Cashless</string>
    <string name="cashless_desc">Gunakan e-wallet untuk\ntransaksi tiket nonton</string>
    <string name="masuk_akun">Masuk Akun</string>
    <string name="daftar_akun_baru">Daftar Akun Baru</string>
    <string name="sign_in">Sign In</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="nama">Nama</string>
    <string name="alamat_email">Alamat Email</string>
    <string name="upload_nanti">Upload Nanti</string>
    <string name="foto">Foto</string>
    <string name="selamat_datang">Selamat Datang\nIlham</string>
    <string name="simpan_dan_lanjutkan">Simpan dan Lanjutkan</string>
    <string name="sedang_tayang">Sedang Tayang</string>
    <string name="segera_hadir">Segera Hadir</string>
    <string name="sinopsis">Sinopsis</string>
    <string name="pilih_bangku">Pilih Bangku</string>
    <string name="mereka_yang_menonton">Mereka Yang Menonton</string>
    <string name="beli_tiket">Beli Tiket</string>
    <string name="bayar_sekarang">Bayar Sekarang</string>
    <string name="batalkan">Batalkan</string>
    <string name="kapan">Kapan</string>
    <string name="tanggal_dan_waktu">Tanggal dan Waktu</string>
    <string name="bioskop">Bioskop</string>
    <string name="bangku">Bangku</string>
    <string name="saldo">Saldo</string>
    <string name="simpan_data">Simpan Data</string>
    <string name="edit_profil">Edit Profil</string>
    <string name="dompetku">Dompetku</string>
    <string name="riwayat">Riwayat</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="home">Home</string>
    <string name="lihat_tiket">Lihat Tiket</string>
    <string name="selamat_menonton">Selamat Menonton!</string>
    <string name="hari_ini">Hari Ini</string>
    <string name="scan_qr">Scan QR</string>
    <string name="cetak">Cetak</string>
    <string name="pengaturan">Pengaturan</string>
    <string name="ganti_bahasa">Ganti Bahasa</string>
    <string name="bantuan">Bantuan</string>
    <string name="buat_akun">Buat Akun</string>
    <string name="saldo_anda_tidak_mencukupi">Saldo Anda Tidak Mencukupi</string>
    <string name="top_up_sekarang">Top Up Sekarang</string>
    <string name="lihat_wallet">Lihat Wallet</string>
    <string name="top_up_sukses">Top Up Sukses</string>
    <string name="sign_up">Sign Up</string>
    <string name="silahkan_tulis_username">Silahkan Tulis Username Anda</string>
    <string name="silahkan_tulis_password">Silahkan Tulis Password Anda</string>
    <string name="user_tidak_ditemukan">User Tidak Ditemukan</string>
    <string name="password_anda_salah">Password Anda Salah</string>
    <string name="silahkan_isi_username">Silahkan Isi Username Anda</string>
    <string name="silahkan_isi_password">Silahkan Isi Password Anda</string>
    <string name="silahkan_ini_nama">Silahkan Isi Nama Anda</string>
    <string name="silahkan_isi_email">Silahkan Isi Email Anda</string>
    <string name="username_tidak_titik">Username Tidak Bisa Menggunakan .(Titik)</string>
    <string name="user_sudah_digunakan">User Sudah Digunakan</string>
    <string name="layar_bioskop">Layar Bioskop</string>
    <string name="penuh">Penuh</string>
    <string name="kosong">Kosong</string>
    <string name="dipilih">Dipilih</string>
    <string name="total_bayar">Total Harus Dibayar</string>
    <string name="pembayaran_sukses">Pembayaran Sukses</string>
    <string name="kursi">Kursi </string>
    <string name="silahkan_melakukan_scanning_pada_counter_tiket_terdekat">Silahkan melakukan scanning pada counter tiket terdekat</string>
    <string name="tutup">TUTUP</string>
</resources>
